# SweetSocket

./: .gitignore  CMakeLists.txt  Makefile  README  SweetSocket.sln  SweetSocket.vcxproj  SweetSocket.vcxproj.filters
examples/http/: http.c  http.h  http.vcxproj  http.vcxproj.filters  http_array.c  http_array.h  http_config.c  http_config.h  http_plugin.c  http_plugin.h  http_process.c  http_process.h  http_utils.c  http_utils.h
examples/http/plugins/http_plugin_cpp/: http_plugin_cpp.cpp  http_plugin_cpp.filters  http_plugin_cpp.vcxproj
examples/http/plugins/http_plugin_java/: WebMain.java  http_java.c  http_plugin_java.vcxproj  http_plugin_java.vcxproj.filters
src/: Entry.c  SweetSocket.c  SweetSocket.h  SweetSocket_Client.c  SweetSocket_Client.h  SweetSocket_Server.c  SweetSocket_Server.h  SweetSocket_Threadeds.c  SweetSocket_Threadeds.h
src/SweetThread/: SweetThread.c  SweetThread.h
